更换导航的图标

--- a/app/templates/admin/admin_base.html
+++ b/app/templates/admin/admin_base.html
@@ -27,6 +27,7 @@
             <!--=================================================-->
             <!--Pace - Page Load Progress Par [OPTIONAL]-->
             <link href="/static/plugins/pace/pace.min.css" rel="stylesheet">
+            <link href="/static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         {% endblock %}
     </head>
 {% endblock %}
