--- a/app/templates/admin/main-nav.html
+++ b/app/templates/admin/main-nav.html
@@ -85,7 +85,7 @@
                         <!--Menu list item-->
                         <li>
                             <a href="#">
-                                <i class="demo-psi-receipt-4"></i>
+                                <i class="fa fa-briefcase"></i>
                                 <span class="menu-title">博文管理</span>
                                 <i class="arrow"></i>
                             </a>
@@ -101,7 +101,7 @@
                         <!--Menu list item-->
                         <li>
                             <a href="#">
-                                <i class="demo-psi-receipt-4"></i>
+                                <i class="fa fa-edit"></i>
                                 <span class="menu-title">评论管理</span>
                                 <i class="arrow"></i>
                             </a>
@@ -111,7 +111,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <i class="demo-psi-receipt-4"></i>
+                                <i class="fa fa-plug"></i>
                                 <span class="menu-title">博客定制</span>
                                 <i class="arrow"></i>
                             </a>
@@ -123,7 +123,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <i class="demo-psi-receipt-4"></i>
+                                <i class="fa fa-th"></i>
                                 <span class="menu-title">其它管理</span>
                                 <i class="arrow"></i>
                             </a>
