--- a/app/templates/admin/main-nav.html
+++ b/app/templates/admin/main-nav.html
@@ -34,7 +34,7 @@
                             <a href="#" class="list-group-item">
                                 <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
                             </a>
-                            <a href="{{ url_for('auth.login') }}" class="list-group-item">
+                            <a href="{{ url_for('auth.logout') }}" class="list-group-item">
                                 <i class="demo-pli-unlock icon-lg icon-fw"></i> 登出
                             </a>
                         </div>
