--- a/app/templates/_submit_comment.html
+++ b/app/templates/_submit_comment.html
@@ -11,7 +11,7 @@
             {{ form.name.label }}{{ form.name(class='form-control', required='', value=current_user.username) }}
             {{ form.email.label }}{{ form.email(class='form-control', required='', value=current_user.email) }}
             {{ form.content.label }}{{ form.content(class='form-control', required='') }}
-            <button type="submit" class="btn btn-default">
+            <button type="submit" class="btn btn-default" style="margin-top: 10px;float: right">
                 提交
             </button>
         </form>
