--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -17,6 +17,7 @@
     <link href="/static/css/demo.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/loaders.css" rel="stylesheet" type="text/css" />
     <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}"  type="image/x-icon">
 
 </head>
 <body>
@@ -79,7 +80,6 @@
 </div>
 <div class="OverWindows"></div>
 <link href="/static/layui/css/layui.css" rel="stylesheet" type="text/css" />
-<!--<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>-->
 <script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src='/static/js/stopExecutionOnTimeout.js?t=1'></script>
 <script src="/static/layui/layui.js" type="text/javascript"></script>
