--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -1,14 +1,14 @@
 /*CSS For common appearance*/
 body {
     /*background: #F0F0F0;*/
-    /*background: url('../images/background.jpg');*/
-    background: url('../images/bg.jpg');
+    background: url('../images/background.jpg');
+    /*background: url('../images/bg.jpg');*/
 }
 .blog-title a:link {
     text-decoration: none;
 }
 .signature {
-    padding-left: 0px;
+    padding-left: 0;
 }
 .content {
     min-height: 800px;
