--- a/app/templates/admin/custom_blog_info.html
+++ b/app/templates/admin/custom_blog_info.html
@@ -46,16 +46,20 @@
                                             aria-hidden="true">×</span></button>
                                     <h4 class="modal-title">修改基本信息</h4>
                                 </div>
-                                <form id="editBlogInfoForm" method="post" action="">
+                                <form id="editBlogInfoForm" method="post" action="" class="form-body">
                                     <div class="modal-body">
-                                        <div class="form-group">
                                             {{ form.csrf_token }}
+                                        <div class="form-group">
                                             {{ form.title.label }}
                                             {{ form.title(class='form-control', required='') }}
+                                        </div>
+                                        <div class="form-group">
                                             {{ form.signature.label }}
                                             {{ form.signature(class='form-control', required='') }}
-                                            {{ form.navbar.label }}
-                                            {{ form.navbar(class='form-control', required='') }}
+                                        </div>
+                                        <div class="form-group">
+                                            {{ form.navbars.label }}
+                                            {{ form.navbars(class='form-control', required='') }}
                                         </div>
                                     </div>
                                     <div class="modal-footer">
